# opsgenie_rust

./: Cargo.toml  Makefile  README.md  Vagrantfile  generator.json  swagger.json
src/: lib.rs  main.rs
