[package]
name = "opsgenie"
version = "0.0.1"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2018"

description = "Simple client library for creating and closing alerts on opsgenie"

homepage = "https://github.com/wojtekw92/opsgenie_rust/blob/master/README.md"
repository = "https://github.com/wojtekw92/opsgenie_rust"

readme = "README.md"
keywords = ["opsgenie", "alert"]
categories = ["development-tools", "api-bindings"]

license = "MIT"

[dependencies]
opsgenie_rs = { path = "./generated/rust" }
reqwest = "~0.9"
csv = "1.1"
chrono = "0.4"
chrono-tz = "0.4"

[dev-dependencies]
chrono = "0.4"